--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.7.0",
     "pg": "^4.5.3",
     "pg-hstore": "^2.3.2",
+    "redis": "^2.6.0-1",
     "sequelize": "^3.21.0"
   }
 }
