--- a/package.json
+++ b/package.json
@@ -14,6 +14,20 @@
   },
   "author": "Eddy W",
   "license": "ISC",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1"
+  },
+  "devDependencies": {
+    "chai": "^4.3.0",
+    "chai-http": "^4.3.0",
+    "debug": "^4.3.1",
+    "mocha": "^8.2.1",
+    "mochawesome": "^6.2.1"
+  },
   "bugs": {
     "url": "https://github.com/ekw8/platform-exercise/issues"
   },
