--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "mocha 'test/**/*.test.js' --reporter mochawesome --reporter-options reportDir=test_reports --exit",
     "app": "node app/index.js",
     "start": "nodemon -L app/bin/www",
-    "fullTest": "npm run stopdb && npm run startdb && sleep 3 && PGPASS=$PGPASS npm run test && npm run stopdb && npm run openreport",
+    "fullTest": "npm run stopdb && npm run startdb && sleep 3 && PGPASS=$PGPASS npm run test && npm run stopdb",
     "openreport": "open test_reports/mochawesome.html",
     "service": "docker-compose build && docker-compose up -d",
     "service-front": "docker-compose build && docker-compose up"
