--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,7 @@ services:
     volumes:
       - db-volume:/var/lib/postgresql/data
     environment:
-      POSTGRES_USER: user
-      POSTGRES_DB: platform_exercise
+      POSTGRES_DB: platform_exer
       POSTGRES_PASSWORD: password
 
   app:
